--- a/choco_pkg.config
+++ b/choco_pkg.config
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <packages>
-    <package id="GoogleChrome" />
+    <package id="Chromium" />
     <package id="0install" />
     <package id="chocolateyPackageUpdater" />
     <package id="desktops" />
@@ -13,4 +13,6 @@
     <package id="texstudio" />
     <package id="veracrypt" />
     <package id="tortoiseGit" />
+    <package id="f.lux">
+    <package id="vlc">
 </packages>
