--- a/choco_pkg.config
+++ b/choco_pkg.config
@@ -13,6 +13,9 @@
     <package id="texstudio" />
     <package id="veracrypt" />
     <package id="tortoiseGit" />
-    <package id="f.lux">
-    <package id="vlc">
+    <package id="f.lux"/>
+    <package id="vlc"/>
+	<package id="octave"/>
+	<package id="pencil"/>
+	<package id="notepadplusplus"/>
 </packages>
