--- a/choco_pkg.config
+++ b/choco_pkg.config
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <packages>
-    <package id="Chromium" />
+    <package id="GoogleChrome.Canary" />
     <package id="0install" />
     <package id="chocolateyPackageUpdater" />
     <package id="desktops" />
